# TFG

./: .gitignore  .pylintrc  .spellcheck.yml  .words.txt  Dockerfile  Dockerfile.train  Jenkinsfile  README.md  docker-compose.yml  pyproject.toml  tasks.py
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  ENHACEMENT_REQUEST.md  FEATURE_REQUEST.md  bug_report.md  enhacement-request.md  feature_request.md
.github/workflows/: checkfiles.yml  pythonversions.yml  spellchecker.yml
docs/: Makefile  proyecto.tex
docs/bibliography/: bibliography.bib
docs/capitulos/: 01_Introduccion.tex  01_objetivos.tex  02_Introduccion.tex  03_Estado_del_arte.tex  04_Planificacion.tex  05_Implementacion.tex  06_Experimentacion.tex  07_Despliegue.tex  08_Conclusiones.tex
docs/portada/: portada.tex
docs/prefacios/: prefacio.tex
docs/slides/: README.md  slides.md
notebooks/: data_analysis.ipynb
src/: cae.py  config.py  convnet.py  resnet.py  vae.py
src/experiments/: cae.yml  convnet.yml  resnet.yml  vae.yml
src/ml/models/: neuralnet.py  resnet.py  vae.py
src/ml/models/convblocks/: resblock.py
src/ml/utils/: device_data_loader.py  snapperml_data_loader.py  utils.py
src/models/: basemodel.py  cae.py  convnet.py  neuralnet.py  nn.py  resnet.py  vae.py
src/models/convblocks/: cae_conv_block.py  resblock.py
src/utils/: device_data_loader.py  utils.py
terraform/: main.tf  provision.sh
terraform/jenkins/: main.tf  provision.sh
terraform/mlflow/: Dockerfile  docker-compose.yml  main.tf  provision.sh
tests/: test_cae.py  test_cae_conv_block.py  test_convnet.py  test_data_loader.py  test_neuralnet.py  test_nn.py  test_resblock.py  test_resnet.py  test_utils.py  test_vae.py
