[tool.poetry]
name = "TFG"
version = "0.0.1"
description = "Dependency file for this project :)"
authors = ["ManuelJNunez <manueljesusnunezruiz@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.8.0"
taskipy = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pylint = "^2.7.2"
black = "^20.8b1"
pytest-mock = "^3.5.1"
coverage = "^5.5"

[tool.taskipy.tasks]
test = "coverage run --source=src/ -m pytest"
cov-result = "coverage report -m"
cov-xml = "coverage xml"
lint = "pylint src --generated-members=torch"
black = "black src --check"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
